# random-world

./: .gitignore  .gitmodules  CMakeLists.txt  start.sh
lib/cpmath/cpmath/: cpmath.h
lib/cpmath/cpmath/act/: act.h  act_3d.h  act_mat4.h
lib/cpmath/cpmath/com/: mat2.h  mat3.h  mat4.h  vec2.h  vec3.h  vec4.h
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: main.cpp  t.h
src/proc/: assets_manager.cpp  assets_manager.h  framebuffer.cpp  framebuffer.h  texture.cpp  texture.h
src/proc/libs_impl/: cute_png_impl.cpp  mimalloc_impl.cpp
src/proc/shaders/: shaders.cpp  shaders.h
src/scene/: camera.cpp  camera.h  obj_3d.cpp  obj_3d.h
src/scene/world/: basic_light.cpp  basic_light.h  chunk.cpp  chunk.h  directional_light.cpp  directional_light.h  light.cpp  light.h  world.cpp  world.h  world_thread.cpp  world_thread.h
src/scene/world/components/: tree.cpp  tree.h
src/win/: i_manager.cpp  i_manager.h  window.cpp  window.h
